# fluidhowto

./: .gitlab-ci.yml  .hgignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  pyproject.toml
book/: _config.yml  _toc.yml  aliases.md  conda-forge.md  hgrc4ipynb  index.md  intro.md  intro_bash.ipynb  mercurial.md  mercurial_heptapod.md  modules.md  python.md  setup-apps.md  setup.md  shell.md  venv.md
book/mercurial/: Gitlab_with_Mercurial.ipynb  heptapod-workflow.md  install-setup.md  interact-with-git-repos.md  mercurial_heptapod.md
book/python/: conda-env-main.yml  conda-forge.md  index.md  modules.md  venv.md
book/setup/: editors.md  index.md  init_os.md  mint-debian.md  setup-apps.md
